--- a/css/style.css
+++ b/css/style.css
@@ -445,4 +445,29 @@ body {
       border-bottom: 2px solid #FF9F1C;
       margin-bottom: 0; }
 
+#back2Top {
+  width: 40px;
+  line-height: 40px;
+  overflow: hidden;
+  z-index: 999;
+  display: none;
+  cursor: pointer;
+  -moz-transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+  position: fixed;
+  bottom: 50px;
+  right: 0;
+  background-color: #FF9F1C;
+  color: #555;
+  text-align: center;
+  font-size: 30px;
+  text-decoration: none; }
+
+#back2Top:hover {
+  background-color: #2EC4B6;
+  color: #000; }
+
 /*# sourceMappingURL=style.css.map */
